Fix wrapping of tags QUARKUS-963 Fixes https://issues.redhat.com/browse/QUARKUS-963

--- a/code.quarkus.io/src/main/frontend/src/code-quarkus/pickers/extensions-picker.scss
+++ b/code.quarkus.io/src/main/frontend/src/code-quarkus/pickers/extensions-picker.scss
@@ -71,6 +71,7 @@
       margin: 5px 5px;
       padding: 0 3px;
       height: 20px;
+      white-space: nowrap;
       color: $extensionsPickerTextColor;
       text-transform: uppercase;
 
